src/test/deca/context/valid/test_overriding_polymorphisme.deca
// Description:
// on teste polymorphisme simple ...


// Resultats :
// ok

class Position {
    void printRole() {
        println("hhhhhhhhhhhhhhh");
    }
}

class Midfielder extends Position {
    void printRole() {
        println("azdadzadazda");
    }
}

{
    Midfielder mf;
    mf = new Midfielder();
    mf.printRole();
}
