src/test/deca/context/invalid/compa_objet.deca
// Description :
// Comparaison < sur les objets ( impossible ... comme en java )
//
// Resultats :
// Echec
class Joueur { }
{
    Joueur a;
    Joueur b;
    a = new Joueur();
    b = new Joueur();
    if (a < b) {
        println("a est meilleur que b");
    }
}
